==> QuickSpot/walter-arduino/examples/walter_feels/ltc4015.cpp <==
#include <esp_log.h>
#include <Wire.h>
#include <Arduino.h>
#include "ltc4015.h"

void LTC4015::_write_word(unsigned char sub_address, unsigned short word)
{
  Wire.beginTransmission(WFEELS_ADDR_LTC4015 >> 1);
  Wire.write(sub_address);
  Wire.write(word & 0xFF);
  Wire.write((word >> 8) & 0xFF);
  Wire.endTransmission();
}

unsigned short LTC4015::read_word(unsigned char sub_address)
{
  unsigned short word = 0;
  Wire.beginTransmission(WFEELS_ADDR_LTC4015 >> 1);
  Wire.write(sub_address);
  Wire.endTransmission();

  Wire.requestFrom(WFEELS_ADDR_LTC4015 >> 1, 2);
  word = (Wire.read() | (Wire.read() << 8));
  return word;
}
